--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     body {
     margin: 0;              
     height: 100vh;        
-    background: url('https://github.com/shzirley/tugas-6-pweb-a/blob/main/bg.jpeg?raw=true') no-repeat center center fixed;
+    background: url('bg.jpeg') no-repeat center center fixed;
     background-size: cover; 
     display: flex;
     justify-content: center;
