--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       height: 100vh;
-      background: url('https://github.com/shzirley/tugas-6-pweb-a/blob/main/bg2.jpeg?raw=true') no-repeat center center fixed;
+      background: url('bg2.jpeg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
